--- a/Melodira/app/src/main/res/values-night/themes.xml
+++ b/Melodira/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,11 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.Melodira" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
+        <!-- 1. Cambiar color de la barra a Blanco Hueso -->
+        <item name="android:statusBarColor">@color/bone_white</item>
+
+        <!-- 2. IMPORTANTE: Hacer que los iconos (hora/batería) sean NEGROS -->
+        <item name="android:windowLightStatusBar">true</item>
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
 </resources>
